[package]
name = "reveal"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4.0.29", features = ["derive"] }
